2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/main.c: simplified handling of d-bus errors.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.[ch]: added utility function that handles
	opening files passed on the command-line.

	* app/app_procs.c
	* app/widgets/gimpdbusservice.c: use the new function instead of
	duplicating the code.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixbuf.c (gimp_pixbuf_from_data): free the thumbnail
	data that used to be leaked for grayscale thumbnails.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpui.c (gimp_ui_init): no need to construct (and leak)
	command-line arguments when initializing GTK+.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/paint/gimppaintbrush.c: added some comments.

	* app/paint/gimppaintcore.c: sprinkled with const qualifiers.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdatafactoryview.c: don't add the open-as-image
	button to all data factory views.

	* app/widgets/gimppatternfactoryview.c: but do it here for the
	Pattern dialog.

2007-01-22  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/script-fu/scripts/guides-new-percent.scm: replaced
	license statement according to bug #119667.

2007-01-21  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpdrawtool.[ch]: maintain an is_drawn boolean which
	indicates whether the drawn stuff is currently visible. Added
	gimp_draw_tool_is_drawn() to obtain it.

	* app/tools/gimpbrushtool.c (gimp_brush_tool_draw): don't create
	the brush outline segments for the purpose of undrawing (if we
	don't have the segments, we can hardly have drawn them before).
	Fixes artifacts when the brush is being scaled or changed.

	* app/core/gimpbrush.c: don't call brush_scale_mask() and
	brush_scale_pixmap() with zero width or height. Fixes warnings
	from these functions.

2007-01-21  Tor Lillqvist  <tml@novell.com>

	* configure.in: Add AC_MSG_RESULT([no]) to the fail branch of